[tool.poetry]
name = "pytest-bravado"
version = "1.0.9"
description = "Pytest-bravado automatically generates from OpenAPI specification client fixtures."
license = "MIT"
authors = ["Viktor Kutepov <vkytepov@live.com>"]
homepage = "https://github.com/vkutepov/pytest-bravado"
classifiers = ["Framework :: Pytest"]

[tool.poetry.plugins."pytest11"]
bravado = "pytest_bravado"

[tool.poetry.dependencies]
python = "^3.8"
bravado = "^11.0.2"
nested_lookup = "0.2.22"

[build-system]
requires = ["poetry>=0.12"]

build-backend = "poetry.masonry.api"
